edit text posotion

--- a/css/suley-ux-design.webflow.css
+++ b/css/suley-ux-design.webflow.css
@@ -1479,6 +1479,7 @@ figcaption {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
+    align-self: start;
   }
 
   .service-name-text {
