--- a/css/suley-ux-design.webflow.css
+++ b/css/suley-ux-design.webflow.css
@@ -399,7 +399,7 @@ figcaption {
 }
 
 .navigation-item {
-  padding-top: 9px;
+  padding-top: 0px;
   padding-bottom: 9px;
   opacity: 0.6;
   font-family: 'Work Sans', sans-serif;
@@ -463,7 +463,7 @@ figcaption {
   max-width: none;
   margin-right: auto;
   margin-left: auto;
-  padding: 30px 0px;
+  padding: 20px 0px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -1851,7 +1851,7 @@ figcaption {
   }
 
   .about-head-text-wrap {
-    width: 50%;
+    width: 100%;
     max-width: 470px;
     margin-top: 30px;
     margin-bottom: 10px;
@@ -2315,6 +2315,19 @@ figcaption {
   -ms-grid-column: 3;
 }
 
+#w-node-_7921e5d6-bdb4-a55e-a743-d89b9be05327-77c0500c {
+  -ms-grid-column: 1;
+  grid-column-start: 1;
+  -ms-grid-column-span: 1;
+  grid-column-end: 2;
+  -ms-grid-row: 1;
+  grid-row-start: 1;
+  -ms-grid-row-span: 1;
+  grid-row-end: 2;
+  -ms-grid-row-align: start;
+  align-self: start;
+}
+
 #w-node-_1e4ce523-7ab7-265c-7727-0136272e0127-77c0500c {
   -ms-grid-row: 3;
   -ms-grid-column: 3;
@@ -2335,6 +2348,19 @@ figcaption {
 .work-grid>#w-node-cf732a68-502a-c15f-b47a-2a9f0f771658-77c0500c {
   -ms-grid-row: 5;
   -ms-grid-column: 3;
+}
+
+#w-node-e80ff6d1-9972-d8b3-3652-c9379a9b2b0b-a8c0500d {
+  -ms-grid-column: 1;
+  grid-column-start: 1;
+  -ms-grid-column-span: 1;
+  grid-column-end: 2;
+  -ms-grid-row: 1;
+  grid-row-start: 1;
+  -ms-grid-row-span: 1;
+  grid-row-end: 2;
+  -ms-grid-row-align: start;
+  align-self: start;
 }
 
 #w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6c2-a8c0500d {
@@ -2437,37 +2463,6 @@ figcaption {
     grid-column-end: 4;
     -ms-grid-row-span: 1;
     grid-row-end: 2;
-  }
-
-  #w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6be-a8c0500d {
-    -webkit-align-self: start;
-    -ms-flex-item-align: start;
-    -ms-grid-row-align: start;
-    align-self: start;
-  }
-}
-
-@media screen and (max-width: 479px) {
-  #w-node-cf732a68-502a-c15f-b47a-2a9f0f771652-77c0500c {
-    -ms-grid-row: 9;
-    -ms-grid-column: 3;
-    grid-area: Area-4;
-  }
-
-  .work-grid>#w-node-cf732a68-502a-c15f-b47a-2a9f0f771652-77c0500c {
-    -ms-grid-row: 9;
-    -ms-grid-column: 3;
-  }
-
-  #w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6be-a8c0500d {
-    -ms-grid-row: 9;
-    -ms-grid-column: 3;
-    grid-area: Area-4;
-  }
-
-  .work-grid>#w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6be-a8c0500d {
-    -ms-grid-row: 9;
-    -ms-grid-column: 3;
   }
 }
 
@@ -2606,16 +2601,6 @@ figcaption {
     -ms-grid-row: 7;
     -ms-grid-column: 3;
   }
-
-  #w-node-cf732a68-502a-c15f-b47a-2a9f0f771652-77c0500c {
-    -ms-grid-row: 7;
-    -ms-grid-column: 3;
-  }
-
-  #w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6be-a8c0500d {
-    -ms-grid-row: 7;
-    -ms-grid-column: 3;
-  }
 }
 
 @media screen and (max-width: 479px) {
@@ -2675,16 +2660,6 @@ figcaption {
   }
 
   .work-grid>#w-node-_439ee3de-4f93-8666-3c5c-0500da844d5b-7ec05009 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 2;
-  }
-
-  .work-grid>#w-node-cf732a68-502a-c15f-b47a-2a9f0f771652-77c0500c {
-    -ms-grid-row: 1;
-    -ms-grid-column: 2;
-  }
-
-  .work-grid>#w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6be-a8c0500d {
     -ms-grid-row: 1;
     -ms-grid-column: 2;
   }
