--- a/css/suley-ux-design.webflow.css
+++ b/css/suley-ux-design.webflow.css
@@ -11,8 +11,8 @@
 }
 
 body {
-  font-family: Montserrat, sans-serif;
-  color: #1a1b1f;
+  font-family: 'Work Sans', sans-serif;
+  color: #333;
   font-size: 16px;
   line-height: 28px;
   font-weight: 400;
